[package]
name = "adsb_exporter"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow           = "^1.0"
env_logger       = "0.9"
geo              = "0.18.0"
lazy_static      = "^1.4"
log              = "0.4"
prometheus       = "0.13.0"
prometheus-hyper = "0.1.3"
reqwest          = { version = "0.11",features = ["blocking"] }
serde            = { version = "^1.0", features = ["derive"] }
serde_json       = "^1.0"
tokio            = { version = "1.14.0", features = ["full"] }
toml             = "0.5.8"
