[package]
name = "adsb_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow           = "^1.0"
bytes            = "^1.0"
console-subscriber = "0.1.0"
env_logger       = "0.9"
futures-util     = "0.3.17"
geo              = "0.18.0"
lazy_static      = "^1.4"
log              = "0.4"
nom              = "^7.1"
prometheus       = "0.13.0"
prometheus-hyper = "0.1.3"
reqwest          = { version = "0.11",features = ["blocking"] }
serde            = { version = "^1.0", features = ["derive"] }
serde_json       = "^1.0"
tokio            = { version = "^1.15.0", features = ["full", "tracing"] }
tokio-util       = { version = "0.6.9" }
toml             = "0.5.8"
